	    ABI is used to communicate with other applications, otherwise,
	    ALSA/OSS4 raw MIDI ports and OSS sequencer ABI are available);
	  - OSS MIDI driver no longer compiles if it isn't needed.
	* Fixed a bug in Windows MME audio driver introduced in version 1.1.0:
	  resetting the synth no longer cause stopping generation of audio output.
	* When loading PulseAudio library dynamically, a library name with the major version number appended is tried first.
	  This allows PulseAudio to be loaded without installing the corresponding dev package, which only contains a versionless link
	  to the library shared object in major Linux/GNU distributions.

2013-09-21:

	1.1.0 released.

	* Updated for compatibility with new library v.1.3.0 API. Reworked rendering engine to make use of library internal MIDI event queue.
	* Removed sysex length limit set in the internal MIDI player and converter.
	* Added reverse stereo option to the synth properties dialog.
	* Improved ClockSync class for providing better timing accuracy yet being more robust.
	* Improved timing accuracy in the "advanced timing" mode.
	* Improved QtAudioDriver. Fixed sound dropouts which may occur when using GUI.
	* MIDI player now sends "Reset all controllers" MIDI events when it stops playing.
	* MIDI file converter now removes leading silence. MIDI conversion dialog now guesses PCM output file name if the user adds MIDI file first.
	* Eliminated application hangs on Windows when the application is closed enforcedly,
	  e.g. when the user closes the application console or shuts down the system.
	* Fixed deadlock which may happen when the user quickly pushes "Play" button in the MIDI player.
	* Improved ROM configuration. Added support for default ROM search path which is a directory "roms" located
	  in the current user home directory.
	* Reworked synth visualisation in order to make our LCD model close the hardware behaviour.
	  Added emulation of the "MIDI MESSAGE" led.