@@ -11,6 +11,7 @@ Upcoming release 1.2.0:
 	  - OSS MIDI driver no longer compiles if it isn't needed.
 	* Fixed a bug in Windows MME audio driver introduced in version 1.1.0:
 	  resetting the synth no longer cause stopping generation of audio output.
+	* When ALSA MIDI driver is used, ALSA MIDI port being listened is now displayed in the main window title.
 	* When loading PulseAudio library dynamically, a library name with the major version number appended is tried first.
 	  This allows PulseAudio to be loaded without installing the corresponding dev package, which only contains a versionless link
 	  to the library shared object in major Linux/GNU distributions.
